<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav"
    android:label="@string/app_name"
    app:startDestination="@id/motorcycle_nav">

    <navigation
        android:id="@+id/motorcycle_nav"
        android:label="Motorcycles"
        app:startDestination="@id/motorcycle_list">
        <fragment
            android:id="@+id/motorcycle_list"
            android:name="com.example.motolog.Fragments.Garage.MotorcycleListFragment"
            android:label="@string/garage"
            tools:layout="@layout/motorcycle_list">
            <action
                android:id="@+id/bikelist_to_bikeadd"
                app:destination="@id/motorcycle_add" />
        </fragment>
        <fragment
            android:id="@+id/motorcycle_add"
            android:name="com.example.motolog.Fragments.Garage.MotorcycleAddFragment"
            android:label="@string/bike_editor"
            tools:layout="@layout/motorcycle_add">
            <action
                android:id="@+id/bikeadd_to_bikelist"
                app:destination="@id/motorcycle_list" />
            <argument
                android:name="currentMotorcycle"
                android:defaultValue="@null"
                app:argType="com.example.motolog.Models.Motorcycle"
                app:nullable="true" />
        </fragment>
        <action
            android:id="@+id/bikes_to_gear"
            app:destination="@id/gear_nav" />
        <action
            android:id="@+id/action_global_settings_nav"
            app:destination="@id/settings_nav" />
        <action
            android:id="@+id/bikes_to_settings"
            app:destination="@id/settings_nav" />
    </navigation>
    <navigation
        android:id="@+id/gear_nav"
        android:label="Gear"
        app:startDestination="@id/gear_list">
        <fragment
            android:id="@+id/gear_list"
            android:name="com.example.motolog.Fragments.Gear.GearListFragment"
            android:label="@string/gear"
            tools:layout="@layout/gear_list">
            <action
                android:id="@+id/gearlist_to_gearadd"
                app:destination="@id/gear_add" />
            <action
                android:id="@+id/gearlist_to_gearshow"
                app:destination="@id/gear_show" />
        </fragment>
        <fragment
            android:id="@+id/gear_add"
            android:name="com.example.motolog.Fragments.Gear.GearAddFragment"
            android:label="@string/gear_editor"
            tools:layout="@layout/gear_add">
            <action
                android:id="@+id/gearadd_to_gearlist"
                app:destination="@id/gear_list" />
            <action
                android:id="@+id/gearadd_to_gearshow"
                app:destination="@id/gear_show" />
            <argument
                android:name="current_gear"
                android:defaultValue="@null"
                app:argType="com.example.motolog.Models.Gear"
                app:nullable="true" />
        </fragment>
        <action
            android:id="@+id/gear_to_bikes"
            app:destination="@id/motorcycle_nav" />
        <action
            android:id="@+id/gear_to_settings"
            app:destination="@id/settings_nav" />
        <fragment
            android:id="@+id/gear_show"
            android:name="com.example.motolog.Fragments.Gear.GearShowFragment"
            android:label="@string/gear"
            tools:layout="@layout/gear_show">
            <action
                android:id="@+id/gearshow_to_gearadd"
                app:destination="@id/gear_add" />
            <action
                android:id="@+id/gearshow_to_gearlist"
                app:destination="@id/gear_list" />
            <argument
                android:name="currentGear"
                app:argType="com.example.motolog.Models.Gear" />
        </fragment>
    </navigation>
    <navigation
        android:id="@+id/settings_nav"
        android:label="Settings"
        app:startDestination="@id/settings">
        <fragment
            android:id="@+id/settings"
            android:name="com.example.motolog.Fragments.Settings.SettingsFragment"
            android:label="@string/settings"
            tools:layout="@layout/settings" />
        <action
            android:id="@+id/settings_to_bikes"
            app:destination="@id/motorcycle_nav" />
        <action
            android:id="@+id/settings_to_gear"
            app:destination="@id/gear_nav" />
    </navigation>
</navigation>