<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gwynn7.motolog.Fragments.Gear.GearAddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_gear_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="125dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ib_gear_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/gear"
                android:longClickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/add_photo" />
        </androidx.cardview.widget.CardView>


        <EditText
            android:id="@+id/et_gear_manufacturer"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="Alpinestars"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_gear_image" />

        <TextView
            android:id="@+id/textView_gear_manufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="italic"
            android:text="@string/manufacturer"
            android:textColor="@color/dark_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_gear_manufacturer" />

        <EditText
            android:id="@+id/et_gear_model"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="Sektor Waterproof"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_gear_manufacturer" />

        <TextView
            android:id="@+id/textView_gear_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="italic"
            android:text="@string/model"
            android:textColor="@color/dark_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_gear_model" />

        <EditText
            android:id="@+id/et_gear_price"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="350"
            android:textSize="25dp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_gear_model" />

        <TextView
            android:id="@+id/textView_gear_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="italic"
            android:text="@string/price"
            android:textColor="@color/dark_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_gear_price" />

        <DatePicker
            android:id="@+id/dp_gear_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:spinnersShown="true"
            android:datePickerMode="spinner"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_gear_price" />

        <Button
            android:id="@+id/bt_deleteGear"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/delete_gear"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_red"
            app:layout_constraintTop_toBottomOf="@+id/dp_gear_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
